Code for class 8

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -41,7 +41,16 @@
     "authoruploadingappamplifyPostConfirmation": {
       "build": true,
       "providerPlugin": "awscloudformation",
-      "service": "Lambda"
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "api",
+          "resourceName": "linkedinlearningamplify",
+          "attributes": [
+            "GraphQLAPIIdOutput"
+          ]
+        }
+      ]
     }
   }
 }
