--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,17 +1,17 @@
 {
-    "projectName": "build-a-vanillajs-application-using-aws-amplify-2883139",
-    "version": "2.0",
-    "frontend": "javascript",
-    "providers": [
-        "awscloudformation"
-    ],
-    "javascript": {
-        "framework": "none",
-        "config": {
-            "SourceDir": "src",
-            "DistributionDir": "dist",
-            "BuildCommand": "npm run-script build",
-            "StartCommand": "npm run-script start"
-        }
+  "providers": [
+    "awscloudformation"
+  ],
+  "projectName": "linkedinlearningampl",
+  "version": "3.1",
+  "frontend": "javascript",
+  "javascript": {
+    "framework": "none",
+    "config": {
+      "SourceDir": "src",
+      "DistributionDir": "dist",
+      "BuildCommand": "npm run-script build",
+      "StartCommand": "npm run-script start"
     }
+  }
 }
